--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
+
+
+#global-navi {
+    background:#89c7de;
+    position: fixed;
+    top: 0;
+    right: 0px;
+    width: 100%;
+}
+#wrapper nav{
+display:inline-block;
+font-size: 16px;
+text-align: center;
+padding:  30px 20px 25px 28px;
+}
+
+.foot{
+    min-height: 100vh;
+    position: relative;/*←相対位置*/
+    padding-bottom: 80px;/*←footerの高さ*/
+    box-sizing: border-box;/*←全て含めてmin-height:100vhに*/
+}
+
+footer{
+    width: 100%;
+    background-color: #89c7de;
+    color: #fff;
+    text-align: center;
+    padding: 30px 0;
+
+ position: absolute;/*←絶対位置*/
+    bottom: 0; /*下に固定*/
+}
+
+
 .md{
     height: 100%;
 }
