--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 #global-navi {
-    background:#89c7de;
+    background:#c08c5b;
     position: fixed;
     top: 0;
     right: 0px;
@@ -11,7 +11,29 @@
 display:inline-block;
 font-size: 16px;
 text-align: center;
-padding:  10px 20px 25px 28px;
+padding:  15px 20px 15px 28px;
+}
+
+.btn-square{
+    position: absolute;
+    top: 80px;
+    right: 20px;
+    display: inline-block;
+    padding: 1px 3px;
+    text-decoration: none;
+    background:  #c08c5b;/*ボタン色*/
+    color: rgb(255, 255, 255);
+  }
+
+.btn-tuika{
+    position: absolute;
+    top: 500px;
+    right: 20px;
+    display: inline-block;
+    padding: 1px 3px;
+    text-decoration: none;
+    background:  #c08c5b;/*ボタン色*/
+    color: rgb(255, 255, 255);
 }
 
 .foot{
@@ -23,7 +45,7 @@ padding:  10px 20px 25px 28px;
 
 footer{
     width: 100%;
-    background-color: #89c7de;
+    background-color:#c08c5b;
     color: #fff;
     text-align: center;
     padding: 30px 0;
@@ -31,6 +53,8 @@ footer{
  position: absolute;/*←絶対位置*/
     bottom: 0; /*下に固定*/
 }
+
+
 
 
 .md{
@@ -45,3 +69,4 @@ footer{
     width: 100%;
     height: 100%;
 }
+
