--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ padding:  15px 20px 15px 28px;
 
 .btn-tuika{
     position: absolute;
-    top: 500px;
+    bottom: 80px;
     right: 20px;
     display: inline-block;
     padding: 1px 3px;
@@ -45,26 +45,7 @@ padding:  15px 20px 15px 28px;
     background:  #c08c5b;/*ボタン色*/
     color: rgb(255, 255, 255);
 }
-.btn-cart:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 100%;
-    width: 0;
-    height: 0;
-    border-left: 30px solid transparent;
-    border-bottom: 100px solid  #c08c5b;
-  }
-  .btn-cart:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 100%;
-    width: 0;
-    height: 0;
-    border-right: 30px solid transparent;
-    border-bottom: 100px solid  #c08c5b;
-  }
+
 
 .btn-syousai{
     position: absolute;
@@ -78,26 +59,7 @@ padding:  15px 20px 15px 28px;
     color: rgb(255, 255, 255);
 }
 
-.btn-syousai:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 100%;
-    width: 0;
-    height: 0;
-    border-left: 30px solid transparent;
-    border-bottom: 100px solid  #c08c5b;
-  }
-  .btn-syousai:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 100%;
-    width: 0;
-    height: 0;
-    border-right: 30px solid transparent;
-    border-bottom: 100px solid  #c08c5b;
-  }
+
 
 .foot{
     min-height: 100vh;
