台形のやつ。なぜか白い線が見える

--- a/style.css
+++ b/style.css
@@ -34,18 +34,41 @@ padding:  15px 20px 15px 28px;
     color: rgb(255, 255, 255);
 }
 
+
+
 .btn-cart{
     position: absolute;
     left: 30px;
     bottom: 0px;
     display: inline-block;
     width: 40%;
+    height: 40px;
     padding: 10px 3px;
     text-align: center;
     background:  #c08c5b;/*ボタン色*/
     color: rgb(255, 255, 255);
 }
 
+.btn-cart:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 100%;
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-bottom: 40px solid  #c08c5b;
+  }
+  .btn-cart:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 0;
+    height: 0;
+    border-right: 20px solid transparent;
+    border-bottom: 40px solid  #c08c5b;
+  }
 
 .btn-syousai{
     position: absolute;
@@ -53,13 +76,33 @@ padding:  15px 20px 15px 28px;
     bottom: 0px;
     display: inline-block;
     width: 40%;
+    height: 40px;
     padding: 10px 3px;
     text-align: center;
     background:  #c08c5b;/*ボタン色*/
     color: rgb(255, 255, 255);
 }
 
-
+.btn-syousai:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 100%;
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-bottom: 40px solid  #c08c5b;
+  }
+  .btn-syousai:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 0;
+    height: 0;
+    border-right: 20px solid transparent;
+    border-bottom: 40px solid  #c08c5b;
+  }
 
 .foot{
     min-height: 100vh;
