--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ padding:  15px 20px 15px 28px;
 }
 
 .btn-square{
-    position: absolute;
+    position: fixed;
     top: 80px;
     right: 20px;
     display: inline-block;
@@ -24,7 +24,7 @@ padding:  15px 20px 15px 28px;
   }
 
 .btn-tuika{
-    position: absolute;
+    position: fixed;
     bottom: 80px;
     right: 20px;
     display: inline-block;
@@ -37,7 +37,7 @@ padding:  15px 20px 15px 28px;
 
 
 .btn-cart{
-    position: absolute;
+    position: fixed;
     left: 30px;
     bottom: 0px;
     display: inline-block;
@@ -57,7 +57,7 @@ padding:  15px 20px 15px 28px;
     width: 0;
     height: 0;
     border-left: 20px solid transparent;
-    border-bottom: 40px solid  #c08c5b;
+    border-bottom: 40px solid #c08c5b;
   }
   .btn-cart:after {
     content: "";
@@ -67,11 +67,11 @@ padding:  15px 20px 15px 28px;
     width: 0;
     height: 0;
     border-right: 20px solid transparent;
-    border-bottom: 40px solid  #c08c5b;
+    border-bottom: 40px solid #c08c5b;
   }
 
 .btn-syousai{
-    position: absolute;
+    position: fixed;
     right: 30px;
     bottom: 0px;
     display: inline-block;
@@ -79,7 +79,7 @@ padding:  15px 20px 15px 28px;
     height: 40px;
     padding: 10px 3px;
     text-align: center;
-    background:  #c08c5b;/*ボタン色*/
+    background:  #8f643d;/*ボタン色*/
     color: rgb(255, 255, 255);
 }
 
@@ -91,7 +91,7 @@ padding:  15px 20px 15px 28px;
     width: 0;
     height: 0;
     border-left: 20px solid transparent;
-    border-bottom: 40px solid  #c08c5b;
+    border-bottom: 40px solid #8f643d;
   }
   .btn-syousai:after {
     content: "";
@@ -101,7 +101,7 @@ padding:  15px 20px 15px 28px;
     width: 0;
     height: 0;
     border-right: 20px solid transparent;
-    border-bottom: 40px solid #c08c5b;
+    border-bottom: 40px solid #8f643d;
   }
 
 .foot{
