--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     top: 0;
     right: 0px;
     width: 100%;
+    z-index: 1;
 }
 #wrapper nav{
 display:inline-block;
@@ -21,6 +22,7 @@ padding:  15px 20px 15px 28px;
     text-decoration: none;
     background:  #c08c5b;/*ボタン色*/
     color: rgb(255, 255, 255);
+    z-index: 1;
   }
 
 .btn-tuika{
@@ -32,9 +34,8 @@ padding:  15px 20px 15px 28px;
     text-decoration: none;
     background:  #c08c5b;/*ボタン色*/
     color: rgb(255, 255, 255);
+    z-index: 1;
 }
-
-
 
 .btn-cart{
     position: fixed;
@@ -47,6 +48,7 @@ padding:  15px 20px 15px 28px;
     text-align: center;
     background:  #c08c5b;/*ボタン色*/
     color: rgb(255, 255, 255);
+    z-index: 2;
 }
 
 .btn-cart:before {
@@ -81,6 +83,7 @@ padding:  15px 20px 15px 28px;
     text-align: center;
     background:  #8f643d;/*ボタン色*/
     color: rgb(255, 255, 255);
+    z-index: 3;
 }
 
 .btn-syousai:before {
@@ -123,6 +126,8 @@ footer{
 
 .md-body{
     height: 100%;
+    position: relative;
+    z-index: 0;
 }
 
 
@@ -135,3 +140,7 @@ footer{
     height: 100%;
 }
 
+/*Cartのスタイル*/
+.cart-img{
+    width: 100%;
+}
