--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 #global-navi {
-        background:#c08c5b;
-        position: fixed;
-        top: 0;
-        right: 0px;
-        width: 100%;
-        z-index: 1;
+    background:#c08c5b;
+    position: fixed;
+    top: 0;
+    right: 0px;
+    width: 100%;
+    z-index: 1;
 }
 
 #wrapper nav {
@@ -12,7 +12,7 @@
     font-size: 16px;
     text-align: center;
     padding: 15px 20px 15px 28px;
-    }
+}
 
 .btn-square {
     position: fixed;
@@ -24,7 +24,7 @@
     background: #c08c5b;/*ボタン色*/
     color: rgb(255, 255, 255);
     z-index: 1;
-  }
+}
 
 .btn-tuika {
     position: fixed;
@@ -61,7 +61,7 @@
     height: 0;
     border-left: 20px solid transparent;
     border-bottom: 40px solid #c08c5b;
-  }
+}
   .btn-cart:after {
     content: "";
     position: absolute;
@@ -71,7 +71,7 @@
     height: 0;
     border-right: 20px solid transparent;
     border-bottom: 40px solid #c08c5b;
-  }
+}
 
 .btn-syousai {
     position: fixed;
@@ -96,7 +96,7 @@
     height: 0;
     border-left: 20px solid transparent;
     border-bottom: 40px solid #8f643d;
-  }
+}
   .btn-syousai:after {
     content: "";
     position: absolute;
@@ -106,7 +106,7 @@
     height: 0;
     border-right: 20px solid transparent;
     border-bottom: 40px solid #8f643d;
-  }
+}
 
 .foot {
     min-height: 100vh;
@@ -141,6 +141,31 @@ footer {
 }
 
 /*Cartのスタイル*/
+
+.cart-body{
+    padding: 0 10px;
+}
+
+.cart-list{
+    border: 3px solid #c08c5b;
+    padding: 20px 20px;
+}
+
+.cart-item{
+    display: flex;
+    margin: 0 0 30px;
+}
+
 .cart-img {
-    width: 100%;
+    width: 40%;
+}
+
+.cart-detail{
+    width: 60%;
+    padding: 0 0 0 20px;
+}
+
+.cart-title{
+    font-size: 16px;
+    letter-spacing: 1em;/*文字の間隔・カーニング*/
 }
