--- a/style.css
+++ b/style.css
@@ -38,41 +38,6 @@
     z-index: 1;
 }
 
-.btn-cart {
-    position: fixed;
-    left: 30px;
-    bottom: 0px;
-    display: inline-block;
-    width: 40%;
-    height: 40px;
-    padding: 10px 3px;
-    text-align: center;
-    background: #c08c5b;/*ボタン色*/
-    color: rgb(255, 255, 255);
-    z-index: 2;
-}
-
-.btn-cart:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 100%;
-    width: 0;
-    height: 0;
-    border-left: 20px solid transparent;
-    border-bottom: 40px solid #c08c5b;
-}
-  .btn-cart:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 100%;
-    width: 0;
-    height: 0;
-    border-right: 20px solid transparent;
-    border-bottom: 40px solid #c08c5b;
-}
-
 .btn-syousai {
     position: fixed;
     right: 30px;
@@ -97,7 +62,8 @@
     border-left: 20px solid transparent;
     border-bottom: 40px solid #8f643d;
 }
-  .btn-syousai:after {
+
+.btn-syousai:after {
     content: "";
     position: absolute;
     top: 0;
@@ -142,18 +108,75 @@ footer {
 
 /*Cartのスタイル*/
 
+.cart {
+    height: 50%;
+    position: fixed;
+    bottom: -50%;
+    left: 0;
+    z-index: 2;
+    transition: bottom 0.4s cubic-bezier(0.5, 0, 0.75, 0);
+}
+
+.cart-open {
+    bottom: 0%;
+}
+
+.btn-cart {
+    left: 30px;
+    bottom: 0px;
+    display: inline-block;
+    width: 40%;
+    height: 40px;
+    padding: 10px 3px;
+    text-align: center;
+    text-decoration: none;
+    background: #c08c5b;/*ボタン色*/
+    color: rgb(255, 255, 255);
+    position: absolute;
+    bottom: 100%;
+}
+
+.btn-cart:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 100%;
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-bottom: 40px solid #c08c5b;
+}
+
+.btn-cart:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 0;
+    height: 0;
+    border-right: 20px solid transparent;
+    border-bottom: 40px solid #c08c5b;
+}
+
 .cart-body{
     padding: 0 10px;
+    height: 100%;
 }
 
 .cart-list{
+    height: 100%;
     border: 3px solid #c08c5b;
     padding: 20px 20px;
+    overflow: scroll;
 }
 
 .cart-item{
     display: flex;
     margin: 0 0 30px;
+}
+
+.cart-item:last-child{
+    margin: 0;
 }
 
 .cart-img {
