--- a/style.css
+++ b/style.css
@@ -9,25 +9,27 @@
     top: 0;
     right: 0px;
     width: 100%;
+    height: 8%;
     z-index: 1;
 }
 
 #wrapper nav {
     display: inline-block;
-    font-size: 16px;
+    font-size: 120%;
     text-align: center;
     padding: 15px 20px 15px 28px;
 }
 
-.btn-square {
+.btn-Back {
     position: fixed;
-    top: 80px;
+    top: 12%;
     right: 20px;
     display: inline-block;
     padding: 1px 3px;
     text-decoration: none;
     background: #c08c5b;/*ボタン色*/
     color: rgb(255, 255, 255);
+    font-size: 120%;
     z-index: 1;
 }
 
