--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@
     padding: 15px 20px 15px 28px;
 }
 
+.CG {
+    width: 100%;
+    height: 100%;
+}
+
 a.btn-Back {
     position: fixed;
     top: 12%;
@@ -27,13 +32,13 @@ a.btn-Back {
     display: inline-block;
     text-decoration: none;
     text-align: center;
-    line-height: 3.5em;
+    line-height: 3em;
     background: #c08c5b;/*ボタン色*/
     color: rgb(255, 255, 255);
     border-radius: 100%;
-    width: 70px;
-    height: 70px;
-    font-size: 120%;
+    width: 60px;
+    height: 60px;
+    font-size: 110%;
     z-index: 1;
 }
 
