--- a/style.css
+++ b/style.css
@@ -61,6 +61,19 @@ a.btn-Back {
     z-index: 1;
 }
 
+.mv-css {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 1;
+    --poster-color: transparent;
+    --progress-bar-color: transparent;
+}
+
+.mv-btn {
+    background: #ccc;
+}
+
 .btn-tuika {
     position: fixed;
     bottom: 10%;
