--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ a.btn-Back {
 }
 
 .mv-btn {
-    background: #ccc;
+    background: transparent;
 }
 
 .btn-tuika {
@@ -123,7 +123,7 @@ footer {
 
 /*Cartのスタイル*/
 
-.cart {
+.cart-close {
     height: 50%;
     position: fixed;
     bottom: -50%;
