モデルの変更できるようになった！ CSS、ARボタンを透明にするためのお試し

--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ a.btn-Back {
     z-index: 1;
 }
 
+#default-progress-bar > .mask { 
+    opacity: 0; 
+}
+
 #ARchange {
     background: transparent;
 }
